--- a/platform/app/public/html-templates/rollbar.html
+++ b/platform/app/public/html-templates/rollbar.html
@@ -16,7 +16,7 @@
     />
     <meta
       name="application-name"
-      content="OHIF Viewer"
+      content="NOVA Viewer"
     />
     <meta
       name="apple-mobile-web-app-capable"
